<resources>
    <string name="app_name">Theatre Tickets</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register</string>
    <string name="btn_confirm">Confirm</string>
    <string name="lbl_no_account">No account yet? Create one:</string>
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Surname</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="btn_return">Return home</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_notifications">My bookings</string>
    <string name="successful_creation">Account successfully created</string>
    <string name="title_activity_selected_show">SelectedShow</string>
    <string name="btn_guest">Continue as a guest</string>
    <string name="title_settings">My account</string>
    <string name="btn_book">Book</string>
    <string name="lbl_numberTix">How many tickets do you want?</string>
    <string name="tix_counter">0</string>
    <string name="select_price_lbl">Select the price you would like:</string>
    <string name="btn_add_to_basket">Add to basket</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_basket">Basket</string>
    <string name="number_of_tickets">Number of tickets: </string>
    <string name="my_basket_title">Your basket:</string>
    <string name="view_booking_lbl">View your tickets</string>
    <string name="upcoming_bookings">Your upcoming bookings:</string>
    <string name="past_bookings">Your past bookings:</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="title_activity_create_review">CreateReview</string>
    <string name="write_review">Write a review (optional)</string>
    <string name="title_activity_view_tickets">ViewTickets</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_navigate_venue">Navigate to venue</string>
    <string name="button_view_reviews">View reviews</string>

</resources>
