<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerUsername"
            type="String" />
        <variable
            name="registerPassword"
            type="String" />
        <variable
            name="registerConfirmPassword"
            type="String" />
        <variable
            name="registerFirstName"
            type="String" />
        <variable
            name="registerLastName"
            type="String" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".Register">

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:text="@{registerUsername}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"

            android:text="@{registerPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastname" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="#673AB7"
            android:onClick="register"
            android:text="@string/btn_register"
            android:textColor="#F3E9E9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_firstname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapSentences"
            android:text="@{registerFirstName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_lastname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|text|textCapSentences"
            android:text="@{registerLastName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/prompt_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:text="@{registerConfirmPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>